--- a/YouthHacks/Base.lproj/Main.storyboard
+++ b/YouthHacks/Base.lproj/Main.storyboard
@@ -92,6 +92,12 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YUM-TH-J74">
+                                        <rect key="frame" x="-19" y="-17" width="413" height="815"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <viewLayoutGuide key="contentLayoutGuide" id="ZTn-3i-Haq"/>
+                                        <viewLayoutGuide key="frameLayoutGuide" id="ZCM-gI-iWC"/>
+                                    </scrollView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </view>
@@ -155,7 +161,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" id="FEP-jQ-Kwq" customClass="Chart" customModule="SwiftChart">
-                                        <rect key="frame" x="15" y="47" width="344" height="153"/>
+                                        <rect key="frame" x="15" y="47" width="344" height="145"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                     </view>
